update to  use ProcessBuilder